compiler/test/conformance/invalid/inv_pub_on_statement.tu
// INVÁLIDO: "pub" antes de um statement solto (só precede declaração top-level)
pub let x = 1
